let boop colors

--- a/index.css
+++ b/index.css
@@ -2,45 +2,44 @@
 html {
 
   /* darkula color definition to start from, because lazy
-   *
-   * black          #000000
-   * darker_grey    #121212
-   * dark_grey      #262626
-   * grey           #444444
-   * light_grey     #585858
-   * lighter_grey   #666666
-   * white          #c0c0c0
-   * dark_white     #9e9e9e
-   * blue           #5f87af
-   * bright_purple  #5f00ff
-   * cyan           #00d7d7
-   * dark_orange    #af5f00
-   * dark_sea_green #5f875f
-   * green          #00af00
-   * light_cyan     #5fafaf
-   * magenta        #ff0087
-   * orange         #d78700
-   * purple         #8787af
-   * red            #d70000
-   * red_orange     #af5f5f
-   * yellow         #808000
-   * yellow_orange  #d7af00
    */
+  --black:          #000000;
+  --darker-grey:    #121212;
+  --dark-grey:      #262626;
+  --grey:           #444444;
+  --light-grey:     #585858;
+  --lighter-grey:   #666666;
+  --white:          #c0c0c0;
+  --dark-white:     #9e9e9e;
+  --blue:           #5f87af;
+  --bright-purple:  #5f00ff;
+  --cyan:           #00d7d7;
+  --dark-orange:    #af5f00;
+  --dark-sea-green: #5f875f;
+  --green:          #00af00;
+  --light-cyan:     #5fafaf;
+  --magenta:        #ff0087;
+  --orange:         #d78700;
+  --purple:         #8787af;
+  --red:            #d70000;
+  --red-orange:     #af5f5f;
+  --yellow:         #808000;
+  --yellow-orange:  #d7af00;
 
-  --main-bg:    #121212; /* darker_grey */
-  --main-fg:    #585858; /* light_grey */
-  --content-bg: #262626; /* dark_grey */
-  --content-fg: #666666; /* lighter_grey */
+  --main-bg:    var(--darker-grey);
+  --main-fg:    var(--light-grey);
+  --content-bg: var(--dark-grey);
+  --content-fg: var(--lighter-grey);
 
-  --ui-bg:           #444444; /* grey */
-  --ui-fg:           #666666; /* lighter_grey */
-  --ui-accent:       #585858; /* light_grey */
-  --ui-accent-focus: #666666; /* lighter_grey */
+  --ui-bg:           var(--grey);
+  --ui-fg:           var(--lighter-grey);
+  --ui-accent:       var(--light-grey);
+  --ui-accent-focus: var(--lighter-grey);
 
-  --action-color:       #5f87af; /* blue */
-  --action-focus-color: #00d7d7; /* cyan */
-  --acting-color:       #ff0087; /* magenta */
-  --acted-color:        #5f00ff; /* bright_purple */
+  --action-color:       var(--blue);
+  --action-focus-color: var(--cyan);
+  --acting-color:       var(--magenta);
+  --acted-color:        var(--bright-purple);
 
 }
 
@@ -85,7 +84,7 @@ main {
   height: 90%;
   font-family: monospace;
   position: relative;
-  overflow: clip;
+  overflow: hidden;
   font-size: 18pt;
   line-height: 1.0;
   --xlate-x: 0;
@@ -101,6 +100,9 @@ main {
   width: 1em;
   text-align: center;
 }
+
+.tile.solid { z-index: 1; }
+.tile.mind  { z-index: 2; }
 
 p {
   margin: 0.3em 0.5em;
