add extensible Sim controls

--- a/index.css
+++ b/index.css
@@ -26,13 +26,15 @@ html {
   --yellow:         #808000;
   --yellow-orange:  #d7af00;
 
-  --main-bg:    var(--darker-grey);
-  --main-fg:    var(--light-grey);
+  --main-bg: var(--darker-grey);
+  --main-fg: var(--light-grey);
+
   --content-bg: var(--dark-grey);
   --content-fg: var(--dark-white);
 
-  --ui-bg:           var(--dark-grey);
-  --ui-fg:           var(--lighter-grey);
+  --ui-bg: var(--dark-grey);
+  --ui-fg: var(--dark-white);
+
   --ui-accent:       var(--grey);
   --ui-accent-focus: var(--light-grey);
 
@@ -83,6 +85,11 @@ header, footer {
 
 header { top: 0; }
 footer { bottom: 0; }
+
+header .ctl {
+  float: left;
+  margin: 0 0.5em;
+}
 
 main {
   position: absolute;
