--- a/index.css
+++ b/index.css
@@ -142,6 +142,10 @@ main .grid {
   font-size: 18pt;
 }
 
+main .grid.inspectable { cursor: crosshair; }
+main .grid.inspectable .tile       { padding: 0.1em; }
+main .grid.inspectable .tile:hover { padding: 0; border: 0.1em solid var(--magenta); }
+
 .tile {
   --x: 0;
   --y: 0;
