[jspit] hoist demo selection out of Sim

--- a/packages/jspit/src/index.css
+++ b/packages/jspit/src/index.css
@@ -86,7 +86,12 @@ footer { bottom: 0; }
 
 header .ctl {
   float: left;
-  margin: 0 0.5em;
+  margin: 0.1em 0.5em 0 0;
+}
+
+header .ctl.right {
+  float: right;
+  margin: 0.1em 0 0 0.5em;
 }
 
 main {
