--- a/packages/jspit/src/index.css
+++ b/packages/jspit/src/index.css
@@ -237,10 +237,11 @@ ul, ol, dl {
 .version {
   font-size: 0.8em;
   margin-top: 0.2em;
+  user-select: all;
 }
-.version:not(:empty):before {
-  content: "v"
-}
+.version:hover { text-decoration: underline; }
+.version:not(:empty):before { content: "(" }
+.version:not(:empty):after { content: ")" }
 
 /* TODO better list styles */
 
