[jspit/dla] repurpose stepLimit to limit particle steps

--- a/packages/jspit/src/dla.css
+++ b/packages/jspit/src/dla.css
@@ -9,6 +9,10 @@ html {
   color:            var(--dark-white);
 }
 
+.grid .tile.ghost {
+  display: none;
+}
+
 .grid .tile.particle.live {
   color: var(--red);
 }
