[jspit] set document font size

--- a/packages/jspit/src/index.css
+++ b/packages/jspit/src/index.css
@@ -46,6 +46,7 @@ html {
   --acted-color:        var(--bright-purple);
 
   font-family: sans;
+  font-size: 12pt;
 }
 
 html, * { box-sizing: border-box; }
