[jspit/dla] specialize particle id display, drop lit-html dep

--- a/packages/jspit/src/index.css
+++ b/packages/jspit/src/index.css
@@ -256,6 +256,8 @@ ul, ol, dl {
   padding-bottom: 0;
 }
 
+.value { user-select: all }
+
 .linkbar span:not(:first-of-type):before { content: " | " }
 
 .version {
