--- a/packages/jspit/src/index.css
+++ b/packages/jspit/src/index.css
@@ -189,6 +189,10 @@ section {
 label       .tip { display: none }
 label:hover .tip { display: block }
 
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+}
+
 p {
   margin: 1em 0.5em;
   padding: 0;
