--- a/cdom-template/index.css
+++ b/cdom-template/index.css
@@ -2,28 +2,52 @@ html {
 
   /* darkula color definition to start from, because lazy
    */
-  --black:          #000000;
-  --darker-grey:    #121212;
-  --dark-grey:      #262626;
-  --grey:           #444444;
-  --light-grey:     #585858;
-  --lighter-grey:   #666666;
-  --white:          #c0c0c0;
-  --dark-white:     #9e9e9e;
-  --blue:           #5f87af;
-  --bright-purple:  #5f00ff;
-  --cyan:           #00d7d7;
-  --dark-orange:    #af5f00;
-  --dark-sea-green: #5f875f;
-  --green:          #00af00;
-  --light-cyan:     #5fafaf;
-  --magenta:        #ff0087;
-  --orange:         #d78700;
-  --purple:         #8787af;
-  --red:            #d70000;
-  --red-orange:     #af5f5f;
-  --yellow:         #808000;
-  --yellow-orange:  #d7af00;
+
+  --black-rgb:          0, 0, 0;
+  --darker-grey-rgb:    18, 18, 18;
+  --dark-grey-rgb:      38, 38, 38;
+  --grey-rgb:           68, 68, 68;
+  --light-grey-rgb:     88, 88, 88;
+  --lighter-grey-rgb:   102, 102, 102;
+  --white-rgb:          192, 192, 192;
+  --dark-white-rgb:     158, 158, 158;
+  --blue-rgb:           95, 135, 175;
+  --bright-purple-rgb:  95, 0, 255;
+  --cyan-rgb:           0, 215, 215;
+  --dark-orange-rgb:    175, 95, 0;
+  --dark-sea-green-rgb: 95, 135, 95;
+  --green-rgb:          0, 175, 0;
+  --light-cyan-rgb:     95, 175, 175;
+  --magenta-rgb:        255, 0, 135;
+  --orange-rgb:         215, 135, 0;
+  --purple-rgb:         135, 135, 175;
+  --red-rgb:            215, 0, 0;
+  --red-orange-rgb:     175, 95, 95;
+  --yellow-rgb:         128, 128, 0;
+  --yellow-orange-rgb:  215, 175, 0;
+
+  --black:          rgb(var(--black-rgb));
+  --darker-grey:    rgb(var(--darker-grey-rgb));
+  --dark-grey:      rgb(var(--dark-grey-rgb));
+  --grey:           rgb(var(--grey-rgb));
+  --light-grey:     rgb(var(--light-grey-rgb));
+  --lighter-grey:   rgb(var(--lighter-grey-rgb));
+  --white:          rgb(var(--white-rgb));
+  --dark-white:     rgb(var(--dark-white-rgb));
+  --blue:           rgb(var(--blue-rgb));
+  --bright-purple:  rgb(var(--bright-purple-rgb));
+  --cyan:           rgb(var(--cyan-rgb));
+  --dark-orange:    rgb(var(--dark-orange-rgb));
+  --dark-sea-green: rgb(var(--dark-sea-green-rgb));
+  --green:          rgb(var(--green-rgb));
+  --light-cyan:     rgb(var(--light-cyan-rgb));
+  --magenta:        rgb(var(--magenta-rgb));
+  --orange:         rgb(var(--orange-rgb));
+  --purple:         rgb(var(--purple-rgb));
+  --red:            rgb(var(--red-rgb));
+  --red-orange:     rgb(var(--red-orange-rgb));
+  --yellow:         rgb(var(--yellow-rgb));
+  --yellow-orange:  rgb(var(--yellow-orange-rgb));
 
   --main-bg: var(--darker-grey);
   --main-fg: var(--light-grey);
