--- a/cdom-template/index.css
+++ b/cdom-template/index.css
@@ -205,9 +205,18 @@ body.running .grid { cursor: none; }
 .grid .tile.solid { z-index: 1; }
 .grid .tile.mind  { z-index: 2; }
 
-.grid.inspectable { cursor: crosshair; }
-.grid.inspectable .tile       { padding: 0.1em; }
-.grid.inspectable .tile:hover { padding: 0; border: 0.1em solid var(--magenta); }
+.grid.inspectable {
+  --inspect-pinned-color: var(--magenta);
+  --inspect-cursor-color: var(--cyan);
+  cursor: crosshair;
+}
+.grid.inspectable .tile.inspect-cursor {
+  z-index: 10000;
+  border: 0.1em solid var(--inspect-cursor-color);
+}
+.grid.inspectable .tile.inspect-cursor.pinned {
+  border-color: var(--inspect-pinned-color);
+}
 
 label       .tip { display: none }
 label:hover .tip { display: block }
