[jspit] port DLA over domgeon, translate TS to JS

--- a/jspit/dla.css
+++ b/jspit/dla.css
@@ -6,7 +6,6 @@ html {
 
 .grid #inspector {
   float: left;
-  visibility: hidden;
   padding: 0;
   z-index: 1000;
 }
@@ -17,9 +16,8 @@ html {
   user-select: all;
 }
 
-.grid.retro #inspector {
-  visibility: visible;
-}
+.running .grid #inspector { visibility: hidden }
+.grid.retro    #inspector { visibility: visible }
 
 .grid .mover.input {
   color: var(--dla-player);
