--- a/cdom-template/index.css
+++ b/cdom-template/index.css
@@ -184,7 +184,7 @@ body.showUI aside {
   width: 40%;
 }
 
-body.running aside { display: none; }
+body.running aside *:not(.sticky) { display: none; }
 
 aside section               { margin-top: 1em; }
 aside section:first-of-type { margin-top: 0; }
