--- a/cdom-template/index.css
+++ b/cdom-template/index.css
@@ -73,7 +73,8 @@ html {
   font-size: 12pt;
 }
 
-html, * { box-sizing: border-box; }
+html { box-sizing: border-box; }
+*, *:before, *:after { box-sizing: inherit; }
 
 body header,
 body footer {
