[cdom-template] tighten aside.menu styles

--- a/cdom-template/index.css
+++ b/cdom-template/index.css
@@ -136,7 +136,7 @@ button[data-legend]::after {
   color: var(--ui-fg);
 }
 
-aside {
+aside.menu {
   overflow: auto;
   max-height: 100%;
   position: absolute;
@@ -151,10 +151,10 @@ aside.modal {
   width: 60%;
 }
 
-body.running aside > *:not(.sticky) { display: none; }
+body.running aside.menu > *:not(.sticky) { display: none; }
 
-aside section               { margin-top: 1em; }
-aside section:first-of-type { margin-top: 0; }
+aside.menu section               { margin-top: 1em; }
+aside.menu section:first-of-type { margin-top: 0; }
 
 section {
   background-color: var(--content-bg);
