[jspit/dla] revamp over planar grid setup

--- a/jspit/dla.css
+++ b/jspit/dla.css
@@ -19,7 +19,8 @@ html {
 .running .grid #inspector { visibility: hidden }
 .grid.retro    #inspector { visibility: visible }
 
-.grid .mover.input {
+.grid .mover.input,
+.grid .mover.inputable {
   color: var(--dla-player);
 }
 
