[cdom] factor common stylesheet out of template

--- a/cdom-template/index.css
+++ b/cdom-template/index.css
@@ -1,7 +1,13 @@
-html {
+@import "cdom/common.css";
 
-  /* darkula color definition to start from, because lazy
-   */
+/* Starter font and color definitions (borrowed from the Darcula colorscheme)
+ * for convenience; these will probably be the first things you'll want to
+ * change.
+ */
+
+:root {
+  font-family: sans;
+  font-size: 12pt;
 
   --black-rgb:          0, 0, 0;
   --darker-grey-rgb:    18, 18, 18;
@@ -49,10 +55,11 @@ html {
   --yellow:         rgb(var(--yellow-rgb));
   --yellow-orange:  rgb(var(--yellow-orange-rgb));
 
+  --inspect-pinned-color: var(--magenta);
+  --inspect-cursor-color: var(--cyan);
+
   --main-bg: var(--darker-grey);
   --main-fg: var(--light-grey);
-
-  --grid-bg: transparent;
 
   --content-bg: var(--dark-grey);
   --content-fg: var(--dark-white);
@@ -69,225 +76,4 @@ html {
   --action-focus-color: var(--cyan);
   --acting-color:       var(--magenta);
   --acted-color:        var(--bright-purple);
-
-  font-family: sans;
-  font-size: 12pt;
-}
-
-html { box-sizing: border-box; }
-*, *:before, *:after { box-sizing: inherit; }
-
-html {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  overflow: hidden;
-}
-
-body {
-  margin: 0;
-  padding: 0.3em 0.5em;
-  height: 100%;
-  overflow: hidden;
-}
-
-html, body {
-  background-color: var(--main-bg);
-  color: var(--main-fg);
-}
-
-a         { color: var(--action-color); text-decoration: none; }
-a:hover,
-a:focus   { color: var(--action-focus-color); text-decoration: underline }
-a:active  { color: var(--acting-color); }
-
-.buttonbar {
-  z-index: 100;
-}
-
-.buttonbar button[data-alias] {
-  display: none;
-}
-
-.buttonbar.left {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-}
-
-.buttonbar.right {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-}
-
-.buttonbar.left.float button { float: left; clear: left; }
-.buttonbar.right.float button { float: right; clear: right; }
-
-.buttonbar.moves button {
-  --holdable: true;
-  min-width: 2em;
-  font-size: 2em;
-}
-
-.buttonbar.actions button {
-  min-width: 1em;
-  font-size: 1em;
-}
-
-button[data-legend]::after {
-  font-size: 0.5em;
-  content: attr(data-legend);
-  color: var(--ui-fg);
-}
-
-aside.menu {
-  overflow: auto;
-  max-height: 100%;
-  position: absolute;
-  z-index: 1000;
-  top: 0;
-  right: 0;
-  width: 40%;
-}
-
-aside.modal {
-  left: 20%;
-  width: 60%;
-}
-
-body.running aside.menu > *:not(.sticky) { display: none; }
-
-aside.menu section               { margin-top: 1em; }
-aside.menu section:first-of-type { margin-top: 0; }
-
-section {
-  background-color: var(--content-bg);
-  color: var(--content-fg);
-  margin-top: 1em;
-  padding: 0.3em 0.5em;
-  border-radius: 0.3em;
-}
-
-.grid {
-  position: relative;
-  height: 100%;
-  width: 100%;
-  z-index: 1;
-  overflow: hidden;
-
-  line-height: 1.0;
-  font-size: 18pt;
-  user-select: none;
-
-  --tile-width:  1em;
-  --tile-height: 1em;
-
-  --xlate-x: 0;
-  --xlate-y: 0;
-
-  background-color: var(--grid-bg);
-  font-family: monospace;
-}
-
-.grid .plane {
-  position: absolute;
-  transform:
-    translateX(calc((0 - var(--xlate-x)) * var(--tile-width)))
-    translateY(calc((0 - var(--xlate-y)) * var(--tile-height)))
-    ;
-}
-
-body.running .grid { cursor: none; }
-
-.grid .tile {
-  --x: 0;
-  --y: 0;
-  position: absolute;
-  left: calc(var(--x) * var(--tile-width));
-  top:  calc(var(--y) * var(--tile-height));
-  width: var(--tile-width);
-  height: var(--tile-height);
-
-  text-align: center;
-  vertical-align: middle;
-  user-select: none;
-}
-
-.grid.inspectable {
-  --inspect-pinned-color: var(--magenta);
-  --inspect-cursor-color: var(--cyan);
-  cursor: crosshair;
-}
-.grid.inspectable .tile.inspect-cursor {
-  z-index: 10000;
-  border: 0.1em solid var(--inspect-cursor-color);
-}
-.grid.inspectable .tile.inspect-cursor.pinned {
-  border-color: var(--inspect-pinned-color);
-}
-
-label       .tip { display: none }
-label:hover .tip { display: block }
-
-h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-}
-
-p {
-  margin: 1em 0.5em;
-  padding: 0;
-}
-
-label:hover {
-  color: var(--action-focus-color);
-}
-
-input, textarea {
-  background-color: var(--ui-bg);
-  color: var(--ui-fg);
-  border: 0.1em solid var(--ui-accent);
-  border-radius: 0.3em;
-}
-
-input:hover, textarea:hover, select:hover,
-input:focus, textarea:focus, select:focus {
-  color: var(--action-focus-color);
-  border-color: var(--action-focus-color);
-}
-
-select, button {
-  background-color: var(--ui-bg);
-  color: var(--action-color);
-  border: 0.1em solid var(--ui-accent);
-  border-radius: 0.3em;
-}
-
-button:hover, button:focus { color: var(--action-focus-color); border-color: var(--action-focus-color); }
-
-button.held, button:active { color: var(--acting-color); border-color: var(--acting-color); }
-
-button:disabled {
-  color: var(--ui-disabled) !important;
-  border-color: var(--ui-disabled) !important;
-}
-
-fieldset {
-  margin: 0.3em 0;
-  background-color: var(--content-bg);
-  color: var(--content-fg);
-  border-radius: 0.3em;
-  border: 0.1em solid var(--ui-accent);
-  padding: 0 0.5em 0.3em 0.5em;
-}
-
-details {
-  margin: 0.3em 0;
-  padding: 0.3em 0.5em;
-}
-
-ul, ol, dl {
-  margin: 0.3em 0;
-  padding-top: 0;
-  padding-bottom: 0;
 }
